--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 
 <html>
 	<head>
@@ -27,10 +27,10 @@
 
 		<!-- Header -->
 			<header id="header" class="alt skel-layers-fixed">
-				<h1><a href="index.html">HTML5 Website <span>by Html5webtemplates.co.uk</span></a></h1>
+				<h1><a href="index.html">DOT IN TECHNOLOGIES</a></h1>
 				<nav id="nav">
 					<ul>
-						<li><a href="index.html">Home</a></li>
+						<li><a href="index.html">DOT IN TECH</a></li>
 						<li>
 							<a href="" class="icon fa-angle-down">Layouts</a>
 							<ul>
